--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "debug": "node --inspect-brk=9229 app.js",
-    "test": "./node_modules/mocha/bin/mocha ./test/*.test.js"
+    "test": "node ./node_modules/mocha/bin/mocha ./test/*.test.js"
   },
   "keywords": [
     "weather",
